# lama-rv-workshop

./: .gitignore  Dockerfile  Dockerfile.nix  Makefile  README.md  bcdump.sh  docker-compose.yml  flake.nix
.github/workflows/: ci.yml
asm_example/: Makefile  hello_riscv.S
benchmarks/: .gitignore  Ack.lama  Dhry.lama  Makefile  Sort.lama
benchmarks/plugin/: insn.c
comp/: .clang-format  .clang-tidy  CMakeLists.txt
comp/cmake/: sanitizers.cmake
comp/include/: bytefile.h  code_buffer.h  compiler.h  cpp.h  cpp23.h  inst_reader.h  instruction.h  instructions.h  opcode.h  register.h  runtime.h  symb_stack.h
comp/src/: bytefile.cpp  disasm.cpp  dump.cpp  emit.cpp  inst_reader.cpp  lama_rv.cpp  print.cpp  read.cpp  runtime.cpp
nix/: GT.nix  lamac.nix  logger.nix  posix-uname.nix
performance/: Makefile
register/: access.csv  container_creator.py  email_sender.py  gen_password.py  gen_ssh.py  main.py  participants.csv
regression/: .gitignore  Makefile  test000.lama  test000.ref  test000a.lama  test000b.lama
runtime/: Makefile  gc.c  runtime.c  runtime_common.h
